fix display-for not working - include correct using statement

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -10,3 +10,5 @@
 @addTagHelper *, OrchardCore.Contents.TagHelpers
 
 @using M96Dev.TaxonomyPosts.ViewModels
+@using OrchardCore.Contents
+@using OrchardCore.ContentManagement
