Renaming project name, updating namespaces.

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -9,6 +9,6 @@
 @addTagHelper *, OrchardCore.ResourceManagement
 @addTagHelper *, OrchardCore.Contents.TagHelpers
 
-@using M96Dev.TaxonomyPosts.ViewModels
+@using M96.Taxonomies.TaxonomyPostsWidget.ViewModels
 @using OrchardCore.Contents
 @using OrchardCore.ContentManagement
