--- a/Views/TaxonomyPostsPart.cshtml
+++ b/Views/TaxonomyPostsPart.cshtml
@@ -20,7 +20,7 @@
             }
             else
             {
-                @foreach (var item in items)
+                @foreach (var item in items.OrderByDescending(item=>item.CreatedUtc))
                 {
                     string titleRender = item.DisplayText;
                     <li>
